compiler/y.output
Terminals unused in grammar

    NEW_LINE
    TAB
    GT
    LT
    GE
    LE
    EQ
    NEQ


Grammar

    0 $accept: start $end

    1 start: %empty
    2      | statement_list

    3 statement_list: statement
    4               | statement_list statement

    5 statement: NAME '=' expression ';'
    6          | IF '(' expression ')' '{' statement_list '}'
    7          | IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'
    8          | WHILE '(' expression ')' '{' statement_list '}'
    9          | print_func ';'

   10 expression: expression '+' expression
   11           | expression '-' expression
   12           | expression '/' expression
   13           | expression '*' expression
   14           | expression COMPARATION expression
   15           | expression AND expression
   16           | expression OR expression
   17           | NOT expression
   18           | '-' expression
   19           | '(' expression ')'
   20           | NUMBER
   21           | NAME
   22           | NAME '(' expression ')'

   23 print_func: PRINT '(' expression ')'
   24           | PRINT '(' QSTRING ')'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6 7 8 19 22 23 24
    ')' (41) 6 7 8 19 22 23 24
    '*' (42) 13
    '+' (43) 10
    '-' (45) 11 18
    '/' (47) 12
    ';' (59) 5 9
    '=' (61) 5
    '{' (123) 6 7 8
    '}' (125) 6 7 8
    error (256)
    NAME <symp> (258) 5 21 22
    NUMBER <string> (259) 20
    QSTRING <string> (260) 24
    COMPARATION <string> (261) 14
    NEW_LINE (262)
    TAB (263)
    PRINT (264) 23 24
    IF (265) 6 7
    ELSE (266) 7
    WHILE (267) 8
    OR (268) 16
    AND (269) 15
    NOT (270) 17
    GT (271)
    LT (272)
    GE (273)
    LE (274)
    EQ (275)
    NEQ (276)
    UMINUS (277)
    LOWER_THAN_ELSE (278)


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    start (35)
        on left: 1 2
        on right: 0
    statement_list <string> (36)
        on left: 3 4
        on right: 2 4 6 7 8
    statement <string> (37)
        on left: 5 6 7 8 9
        on right: 3 4
    expression <string> (38)
        on left: 10 11 12 13 14 15 16 17 18 19 20 21 22
        on right: 5 6 7 8 10 11 12 13 14 15 16 17 18 19 22 23
    print_func <string> (39)
        on left: 23 24
        on right: 9


State 0

    0 $accept: . start $end

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    $default  reduce using rule 1 (start)

    start           go to state 5
    statement_list  go to state 6
    statement       go to state 7
    print_func      go to state 8


State 1

    5 statement: NAME . '=' expression ';'

    '='  shift, and go to state 9


State 2

   23 print_func: PRINT . '(' expression ')'
   24           | PRINT . '(' QSTRING ')'

    '('  shift, and go to state 10


State 3

    6 statement: IF . '(' expression ')' '{' statement_list '}'
    7          | IF . '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    '('  shift, and go to state 11


State 4

    8 statement: WHILE . '(' expression ')' '{' statement_list '}'

    '('  shift, and go to state 12


State 5

    0 $accept: start . $end

    $end  shift, and go to state 13


State 6

    2 start: statement_list .
    4 statement_list: statement_list . statement

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    $default  reduce using rule 2 (start)

    statement   go to state 14
    print_func  go to state 8


State 7

    3 statement_list: statement .

    $default  reduce using rule 3 (statement_list)


State 8

    9 statement: print_func . ';'

    ';'  shift, and go to state 15


State 9

    5 statement: NAME '=' . expression ';'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 21


State 10

   23 print_func: PRINT '(' . expression ')'
   24           | PRINT '(' . QSTRING ')'

    NAME     shift, and go to state 16
    NUMBER   shift, and go to state 17
    QSTRING  shift, and go to state 22
    NOT      shift, and go to state 18
    '-'      shift, and go to state 19
    '('      shift, and go to state 20

    expression  go to state 23


State 11

    6 statement: IF '(' . expression ')' '{' statement_list '}'
    7          | IF '(' . expression ')' '{' statement_list '}' ELSE '{' statement_list '}'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 24


State 12

    8 statement: WHILE '(' . expression ')' '{' statement_list '}'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 25


State 13

    0 $accept: start $end .

    $default  accept


State 14

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


State 15

    9 statement: print_func ';' .

    $default  reduce using rule 9 (statement)


State 16

   21 expression: NAME .
   22           | NAME . '(' expression ')'

    '('  shift, and go to state 26

    $default  reduce using rule 21 (expression)


State 17

   20 expression: NUMBER .

    $default  reduce using rule 20 (expression)


State 18

   17 expression: NOT . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 27


State 19

   18 expression: '-' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 28


State 20

   19 expression: '(' . expression ')'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 29


State 21

    5 statement: NAME '=' expression . ';'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ';'          shift, and go to state 37


State 22

   24 print_func: PRINT '(' QSTRING . ')'

    ')'  shift, and go to state 38


State 23

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   23 print_func: PRINT '(' expression . ')'

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ')'          shift, and go to state 39


State 24

    6 statement: IF '(' expression . ')' '{' statement_list '}'
    7          | IF '(' expression . ')' '{' statement_list '}' ELSE '{' statement_list '}'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ')'          shift, and go to state 40


State 25

    8 statement: WHILE '(' expression . ')' '{' statement_list '}'
   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ')'          shift, and go to state 41


State 26

   22 expression: NAME '(' . expression ')'

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 42


State 27

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   17           | NOT expression .

    COMPARATION  shift, and go to state 30
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36

    $default  reduce using rule 17 (expression)


State 28

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   18           | '-' expression .

    $default  reduce using rule 18 (expression)


State 29

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   19           | '(' expression . ')'

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ')'          shift, and go to state 43


State 30

   14 expression: expression COMPARATION . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 44


State 31

   16 expression: expression OR . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 45


State 32

   15 expression: expression AND . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 46


State 33

   11 expression: expression '-' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 47


State 34

   10 expression: expression '+' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 48


State 35

   13 expression: expression '*' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 49


State 36

   12 expression: expression '/' . expression

    NAME    shift, and go to state 16
    NUMBER  shift, and go to state 17
    NOT     shift, and go to state 18
    '-'     shift, and go to state 19
    '('     shift, and go to state 20

    expression  go to state 50


State 37

    5 statement: NAME '=' expression ';' .

    $default  reduce using rule 5 (statement)


State 38

   24 print_func: PRINT '(' QSTRING ')' .

    $default  reduce using rule 24 (print_func)


State 39

   23 print_func: PRINT '(' expression ')' .

    $default  reduce using rule 23 (print_func)


State 40

    6 statement: IF '(' expression ')' . '{' statement_list '}'
    7          | IF '(' expression ')' . '{' statement_list '}' ELSE '{' statement_list '}'

    '{'  shift, and go to state 51


State 41

    8 statement: WHILE '(' expression ')' . '{' statement_list '}'

    '{'  shift, and go to state 52


State 42

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   22           | NAME '(' expression . ')'

    COMPARATION  shift, and go to state 30
    OR           shift, and go to state 31
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36
    ')'          shift, and go to state 53


State 43

   19 expression: '(' expression ')' .

    $default  reduce using rule 19 (expression)


State 44

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   14           | expression COMPARATION expression .
   15           | expression . AND expression
   16           | expression . OR expression

    '-'  shift, and go to state 33
    '+'  shift, and go to state 34
    '*'  shift, and go to state 35
    '/'  shift, and go to state 36

    $default  reduce using rule 14 (expression)


State 45

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression
   16           | expression OR expression .

    COMPARATION  shift, and go to state 30
    AND          shift, and go to state 32
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36

    $default  reduce using rule 16 (expression)


State 46

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   15           | expression AND expression .
   16           | expression . OR expression

    COMPARATION  shift, and go to state 30
    '-'          shift, and go to state 33
    '+'          shift, and go to state 34
    '*'          shift, and go to state 35
    '/'          shift, and go to state 36

    $default  reduce using rule 15 (expression)


State 47

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   11           | expression '-' expression .
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36

    $default  reduce using rule 11 (expression)


State 48

   10 expression: expression . '+' expression
   10           | expression '+' expression .
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36

    $default  reduce using rule 10 (expression)


State 49

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   13           | expression . '*' expression
   13           | expression '*' expression .
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    $default  reduce using rule 13 (expression)


State 50

   10 expression: expression . '+' expression
   11           | expression . '-' expression
   12           | expression . '/' expression
   12           | expression '/' expression .
   13           | expression . '*' expression
   14           | expression . COMPARATION expression
   15           | expression . AND expression
   16           | expression . OR expression

    $default  reduce using rule 12 (expression)


State 51

    6 statement: IF '(' expression ')' '{' . statement_list '}'
    7          | IF '(' expression ')' '{' . statement_list '}' ELSE '{' statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 54
    statement       go to state 7
    print_func      go to state 8


State 52

    8 statement: WHILE '(' expression ')' '{' . statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 55
    statement       go to state 7
    print_func      go to state 8


State 53

   22 expression: NAME '(' expression ')' .

    $default  reduce using rule 22 (expression)


State 54

    4 statement_list: statement_list . statement
    6 statement: IF '(' expression ')' '{' statement_list . '}'
    7          | IF '(' expression ')' '{' statement_list . '}' ELSE '{' statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 56

    statement   go to state 14
    print_func  go to state 8


State 55

    4 statement_list: statement_list . statement
    8 statement: WHILE '(' expression ')' '{' statement_list . '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 57

    statement   go to state 14
    print_func  go to state 8


State 56

    6 statement: IF '(' expression ')' '{' statement_list '}' .
    7          | IF '(' expression ')' '{' statement_list '}' . ELSE '{' statement_list '}'

    ELSE  shift, and go to state 58

    $default  reduce using rule 6 (statement)


State 57

    8 statement: WHILE '(' expression ')' '{' statement_list '}' .

    $default  reduce using rule 8 (statement)


State 58

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE . '{' statement_list '}'

    '{'  shift, and go to state 59


State 59

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' . statement_list '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4

    statement_list  go to state 60
    statement       go to state 7
    print_func      go to state 8


State 60

    4 statement_list: statement_list . statement
    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list . '}'

    NAME   shift, and go to state 1
    PRINT  shift, and go to state 2
    IF     shift, and go to state 3
    WHILE  shift, and go to state 4
    '}'    shift, and go to state 61

    statement   go to state 14
    print_func  go to state 8


State 61

    7 statement: IF '(' expression ')' '{' statement_list '}' ELSE '{' statement_list '}' .

    $default  reduce using rule 7 (statement)
